[package]
name = "token_transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"]}
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.134"
anyhow = "1.0.95"
futures = "0.3.31"
solana-sdk = "2.1.7"
bs58 = "0.5.1"
chrono = "0.4.39"
rand = "0.8.5"
bincode = "1.3.3"

[[bin]]
name = "token_transaction"
path = "src/main.rs"