[package]
name = "wallet_balance"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"]}
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.134"
anyhow = "1.0.95"
futures = "0.3.31"